fix css issue on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -804,60 +804,7 @@ header .follow a:hover {
 .footer span {
     color: var(--main-color);
 }
-
-
-
-
-@media screen and (min-width: 1600px) {
-    body {
-        background: #fef9f5;
-    }
-    .container {
-        padding-left: 0;
-        max-width: 1200px;
-        margin: 0 auto;
-        background: var(--color-primary);
-    }
-
-    header {
-        all: inherit;
-        position: fixed;
-        background: #fef9f5;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        z-index: 1000;
-        padding: 2rem 6rem;
-        width: 100%;
-        height: auto;
-        text-align: center;
-        flex-flow: row;
-        color: #111;
-    }
-
-    header .logo {
-        font-size: 2.1rem;
-        color: #111;
-        font-weight: 500;
-        text-transform: capitalize;
-    }
-
-    header .follow a {
-        color: #111;
-    }
-
-    header .navbar a {
-        display: inline-block;
-        font-size: 2rem;
-        color: #111;
-        margin: 0 1rem;
-        font-weight: 400;
-    }
-    
-    .video-container {
-        height: 29rem;
-    }
-}   
+ 
 
 /* ================== MEDIA QUERIES (TABLATES) ====================== */
 @media screen and (max-width: 1024px) {
@@ -866,6 +813,10 @@ header .follow a:hover {
     }
 
     body {
+        padding: 0;
+    }
+
+    .container {
         padding: 0;
     }
 
@@ -985,5 +936,57 @@ header .follow a:hover {
 
     .video-container {
         height: 35rem;
+    }
+}
+
+
+@media screen and (min-width: 1600px) {
+    body {
+        background: #fef9f5;
+    }
+    .container {
+        padding-left: 0;
+        max-width: 1200px;
+        margin: 0 auto;
+        background: var(--color-primary);
+    }
+
+    header {
+        all: inherit;
+        position: fixed;
+        background: #fef9f5;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        z-index: 1000;
+        padding: 2rem 6rem;
+        width: 100%;
+        height: auto;
+        text-align: center;
+        flex-flow: row;
+        color: #111;
+    }
+
+    header .logo {
+        font-size: 2.1rem;
+        color: #111;
+        font-weight: 500;
+        text-transform: capitalize;
+    }
+
+    header .follow a {
+        color: #111;
+    }
+
+    header .navbar a {
+        display: inline-block;
+        font-size: 2rem;
+        color: #111;
+        margin: 0 1rem;
+        font-weight: 400;
+    }
+    
+    .video-container {
+        height: 29rem;
     }
 }
